DEV - added UX and deployment to README.md file. BUG - fixed CSS styling and logo on navbar not showing on deployed site

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,11 @@ body {
     margin: 0 auto;
 }
 
+.nav-item.active , .nav-item.active a {
+    font-weight: bold !important;
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+  }
 
 /*---------------------------------------- HERO IMAGE ----------------------------------------*/
 
